inizio a ripensare Cadesc da accrescimento solidi

--- a/CAdesc.tex
+++ b/CAdesc.tex
@@ -33,7 +33,9 @@ Planetary formation scenario revisited: CA vs GI (2007)
 
 \section{Sedimentazione polvere e formazione planetesimi}
 
+\begin{errata}[Massa, dimensioni polvere nei dischi protoplanetarii]
 La polvere presente nel materiale interstellare ha dimensioni di \SI{0.1}{\micro\meter}: l'evoluzione del disco di polvere \'e determinata da attrazione della stella centrale e drag del gas.
+\end{errata}
 
 %Assumo  sedimenta verso il centro del disco e forma aggregati di dimensioni maggiori: 
 \begin{workout}[Succo beamer formazione]
