--- a/pps-seminario.tex
+++ b/pps-seminario.tex
@@ -101,7 +101,7 @@
 Cosa ho messo nel modello e2e?
 Massa critica per accrescimento di gas: tempo scala accrescimento planetesimi vs tempo scala disco.
 Tempi scala migrazione
-\item distribuzione in semiassi che dipende da posizione iniziale embrione: necessity to include earlier planetary formation; montecarlo variable: initial starting position embryos- kokubo ida 00: uniform distro in log(a) (vedi anche ida lin 10); hasegawa pudritz 11, cridland 16: embryos rapidly moves into traps.
+\item distribuzione in semiassi che dipende da posizione iniziale embrione: necessity to include earlier planetary formation; montecarlo variable: initial starting position embryos- kokubo ida 00: uniform distro in log(a) (vedi anche ida lin 10) (dov'era scritto del comportamento caotico??+); hasegawa pudritz 11, cridland 16: embryos rapidly moves into traps.
 Preferred formation regions of planetesimal (Drazkowska16; brauer 08), particle pile-up outside orbits of already existing planets (Pinilla15), strong migration traps (Horn 12, Hasegawa Pudritz 12).
 Disc/planetesimals parameters: planetesimal has steeper profile $\propto r\expy{-3/2}$, outer exponential radius half that of gas: inward drift of dust (kornet 01, birnstiel Andrews 14), concentrated distro resulting from planetesimal formation (Drazkowska 16); planetesimal size is 300m, $\alpha=0.002$.
 \item Distribuzione raggi: diagramma massa-raggio, composizione, evaporazione.
@@ -183,8 +183,14 @@ Alcuni dati osservativi riguardo al sistema solare lasciano ipotizzare che il pr
 \begin{figure}[!ht]
 \includegraphics[width=0.9\textwidth]{accretiontimeline}\caption{Rappresentazione schematica del processo di formazione protopianeti dalla polvere. Da \cite{perryman2011exoplanet}.}\label{fig:accretiontimeline}
 \end{figure}
+\begin{errata}[evoluzione polvere nei dischi di accrescimento: lo scenario CA]
 Il collasso di una nube molecolare produce strutture appiattite la cui evoluzione \'e determinata dal trasporto di momento angolare verso l'esterno, l'interazione con l'oggetto centrale (campi magnetici vento stellare) e con l'ambiente circostante.
 L'ipotesi su cui si basano le simulazioni considerate \'e che la componente polverosa formi corpi pi\'u massicci fino a masse di frazioni di masse terrestri  ed eventualmente, per corpi sufficientemente massicci, accresca gas: lo scenario di core accretion (CA).
+\end{errata}
+
+\begin{workout}[Intro alle pps basate su CA]
+qa	z
+\end{workout}
 
 \input{CAdesc}
 \cleartorecto
