ristrutturando CAdesc.tex

--- a/pps-seminario.tex
+++ b/pps-seminario.tex
@@ -188,8 +188,9 @@ Il collasso di una nube molecolare produce strutture appiattite la cui evoluzion
 L'ipotesi su cui si basano le simulazioni considerate \'e che la componente polverosa formi corpi pi\'u massicci fino a masse di frazioni di masse terrestri  ed eventualmente, per corpi sufficientemente massicci, accresca gas: lo scenario di core accretion (CA).
 \end{errata}
 
-\begin{workout}[Intro alle pps basate su CA]
-qa	z
+\begin{workout}[Intro alle pps basate su CA. Completo risultati e shortcoming del berna model]
+Scale in gioco: semplificazioni e suddivisione in step successivi che uso a seconda degli scopi.
+Volu d'uccello sulla fisica in gioco: interazioni N-body gravitazionali, evoluzione collisionale/frammentazione, interazione aerodynamica gas-particelle, interazione gravitazionale pianeti-disco
 \end{workout}
 
 \input{CAdesc}
@@ -226,7 +227,6 @@ A questo scopo  \'e necessario introdurre una descrizione semplificata dei proce
 \printbibliography
 %\listoffigures
 \ifx\versione\bozza
-\woc
 \erratac
 \fi
 
