--- a/PFMconstraints.tex
+++ b/PFMconstraints.tex
@@ -162,36 +162,8 @@ Effects of inhomogenous infall on obliquity (tremaine 91, bate 10)
 
 
 {\let\clearpage\relax\let\cleardoublepage\relax
-\chapter{Caratteristiche della popolazione di esopianeti}
+\chapter{Caratteristiche della popolazione di esopianeti osservati}
 }
-
-\begin{wrapfigure}[10]{l}{0.65\textwidth}
-\includegraphics[trim={0cm 0 0 0},clip, width=0.65\textwidth]{obsMa}
-\caption{Diagramma massa-distanza degli esopianeti in ''The extrasolar planet encyclopedia''. Rosso, celeste, magenta e verde sono pianeti rivelati tramite RV, T, osservazione diretta e microlensing. Da \cite{mordasini2018planetary}.}\label{fig:Maplot}
-\end{wrapfigure}
-
-\begin{workout}[bias osservativi tecnica/strumento]
-La popolazione degli esopianeti osservata riflette quella reale tramite gli effetti di selezione dovuti alla probabilit\'a di rivelamento della tecnica/strumento particolari.
-\end{workout}
-
-Le osservazioni pi\'u numerose sono basate sull'osservazione della velocit\'a lungo la linea di vista dovuto al moto della stella attorno al baricentro del sistema stella pianeta (RV) o differenza nella luminosit\'a dovuto al transito del pianeta tra stella e osservatore (T). \'E evidente da \ref{fig:Maplot} che i pianeti extra-solari osservati riempono una vasta regione del diagramma $(a,M)$.
-
-\begin{workout}[bimodal radius distro is observed by transit?]
-Characterization of exoplanets from their formation II. The planetary mass-radius relationship pg 21: bimodal radius distribution
-\end{workout}
-
-\begin{workout}[frequenza sistemi planetarii:doppler + transito]
-tab.1 mayor11(RV)
-tab.1: occurrence and architecture exoplanetary system 
-\end{workout}
-
-\begin{workout}[Occurence rate]
-\begin{itemize}
-\item Coralie hot jupiter: giant planets $M\sin{i}>0.2\mjupiter$ and $a<0.1au$; $5.6\%$ giant out to 4au
-\item Lick/Keck/AAT ($M\sin{i}>0.5\mjupiter$): $1.2\%$ stars have hot jupiter and $6.6\%$ giant within 5 au
-\item ...
-\end{itemize}
-\end{workout}
 
 \vspace{5cm}
 
@@ -366,54 +338,11 @@ La figura (\subref{fig:howard2012planet}) mostra distribuzione radiale corretta 
 %&k_R=2.9_{-0.4}^{+0.5},\ \alpha=-1.92\pm0.11
 %\end{align*}
 
-\begin{wrapfigure}[18]{l}{0.61\textwidth}
-\centering \includegraphics[trim={0cm 12cm 0 0},clip, width=0.6\textwidth]{MR-model-obs}
-\caption{Relazione massa-raggio determinata sulla base di modello planetario dopo \SI{5}{\giga\year}. Per gli esopianeti sono indicate le curve per temperature di equilibrio di \SI{1000}{\kelvin} e \SI{2000}{\kelvin}. Da \cite{guillot2014giant}.}\label{fig:MR-model-obs}
-\end{wrapfigure}
-
-Nel caso un pianeta osservato tramite transito abbia massa nota \'e possibile determinarne la struttura interna tramite un modello planetario: La posizione di un pianeta nel diagramma massa-raggio \'e determinata dalla storia di accrescimento del pianeta (pianeta roccioso, pianeta costituito in parte da ghiacci, pianeta con massa consistente di gas), dal bilancio termico, e propriet\'a di H/He e metalli a alte densit\'a (rottura H molecolare, ionizzazione da pressione, degenerazione elettronica, transizioni di fase). La figura \ref{fig:MR-model-obs} mostra la relazione massa-raggio per pianeti nettuniani fino a regimi stellari. Considerando l'equazione di stato
-\begin{equation}
-P\propto\rho\expy{\gamma},\ \gamma=\frac{1}{n}+1
-\end{equation}
-la relazione massa raggio \'e
-\begin{equation}
-R\propto M\expy{(1-n)/(3-n)}
-\end{equation}
-per $M\approx\mjupiter$ $n\approx1$ quindi il raggio \'e approssimativamente costante. Questo fatto \'e visibile anche nella distribuzione dei raggi planetari (figura \subref{fig:probvsR-T}) nel picco attorno a $\rjupiter$.
-La figura (\subref{fig:RfreqPl100ub}) mostra due picchi nella distribuzione radiale a $1.3\rearth{}$ e $2.4\rearth{}$ dovuti alle sottopopolazioni di pianeti rocciosi e gassosi per $P<\SI{100}{\day}$: i pianeti rocciosi hanno atmosfera di H/He che non contribuisce alle dimensione mentre i pianeti nettuniani hanno strato di gas consistente rispetto alla massa del pianeta. La valle a $1.7\rearth{}$ potrebbe essere il raggio di separazione tra pianeti terrestri con atmosfera tenue di H/He soggetta a evaporazione e pianeti nettuniani con massa consistente di H/He.
-La distribuzione dei periodi \'e mostrata in figura (\subref{fig:freqperstarvsPanfit}): i pianeti sono raggruppati per intervalli di raggio. La frequenza dei pianeti in funzione del periodo segue andamento
-\begin{equation}
-\TDy{\log{P}}{f}=K_PP\expy{\beta}[1-\exp{-(\frac{P}{P_0})\expy{\gamma}}]
-\end{equation}
-Si ipotizza che il diverso valore del raggio critico $P_0$ (riportato in figura) sia dovuto alla dipendenza dal raggio planetario del meccanismo di frenamento della migrazione.
-
-\begin{errata}[Equazione di stato politropa: relazione massa raggio]
-\begin{equation}
-P\propto\rho\expy{\gamma},\ \gamma=\frac{1}{n}+1
-\end{equation}
-si che per $M\approx\mjupiter$ $n\approx1$.
-Inoltre la relazione massa-raggio  \'e approssimabile
-\begin{equation}
-R\propto M\expy{(1-n)/(3-n)}
-\end{equation}
-\end{errata}
-
-%\begin{figure}[!ht] \centering\includegraphics[trim={0cm 14cm 0 0},clip, keepaspectratio,width=0.9\textwidth]{MRD}\caption{Diagramma mass-raggio per pianeti di transito. Le curve tratteggiate sono a densit\'a costante. Il simbolo $\circ$ indica i pianeti del sistema solare. Da \cite{perryman2011exoplanet}.}\label{fig:MRD}
-%\end{figure}
-
-%\includegraphics[trim={0cm 0 0 0},clip, keepaspectratio,width=0.9\textwidth]{freqvsRpl50d}\label{freqvsRpl50d}\caption{Da \cite{howard2012planet}}
-% \includegraphics[trim={0cm 0 0 0},clip,width=0.95\textwidth]{keplerRfreq}\label{fig:keplerRfreq} \caption{Da \cite{fressin2013false}}
-%\includegraphics[trim={0cm 0 0 0},clip, keepaspectratio,width=0.9\textwidth]{freqvsRpl50d}\label{fig:freqvsRpl50d}\caption{Da \cite{}.}
-
 \begin{figure}[!ht]
-\begin{subfigure}[b]{0.49\textwidth} \centering \includegraphics[trim={0 12cm 0 0},clip, width=0.95\textwidth]{RfreqPl100ub} 
-\caption{Distribuzione per i pianeti osservati tramite transito con $P<\SI{100}{\day}$: la valle a $1.7\mearth{}$ si ipotizza causato dall'evaporazione. Da \cite{fulton2017california}.}\label{fig:RfreqPl100ub}\end{subfigure}
-~
-\begin{subfigure}[b]{0.47\textwidth}
-\centering
-\includegraphics[trim={0cm 19cm 0 0},clip,width=0.95\textwidth]{freqperstarvsPanfit}
-\caption{Distribuzione dei periodi orbitali raggruppate per diversi raggi planetari: indicato il diverso periodo critico a cui si ha drastica diminuzione nella distribuzione planetaria. Da \cite{howard2012planet}.}\label{fig:freqperstarvsPanfit}
-\end{subfigure}
+	\centering
+	\includegraphics[trim={0cm 19cm 0 0},clip,width=0.95\textwidth]{freqperstarvsPanfit}
+	\caption{Distribuzione dei periodi orbitali raggruppate per diversi raggi planetari: indicato il diverso periodo critico a cui si ha drastica diminuzione nella distribuzione planetaria. Da \cite{howard2012planet}.}\label{fig:freqperstarvsPanfit}
+
 \end{figure}
 
 \begin{workout}[transit distro observed refs]
@@ -479,6 +408,495 @@ Are planetary systems filled to capacity? (Fang Nargot 13)
 
 \section{Propriet\'a generali esopianeti}
 
+\begin{wrapfigure}[10]{l}{0.65\textwidth}
+	\includegraphics[trim={0cm 0 0 0},clip, width=0.65\textwidth]{obsMa}
+	\caption{Diagramma massa-distanza degli esopianeti in ''The extrasolar planet encyclopedia''. Rosso, celeste, magenta e verde sono pianeti rivelati tramite RV, T, osservazione diretta e microlensing. Da \cite{mordasini2018planetary}.}\label{fig:Maplot}
+\end{wrapfigure}
+
+\begin{workout}[bias osservativi tecnica/strumento]
+	La popolazione degli esopianeti osservata riflette quella reale tramite gli effetti di selezione dovuti alla probabilit\'a di rivelamento della tecnica/strumento particolari.
+\end{workout}
+
+\begin{workout}[planet diversity]
+\'E evidente da \ref{fig:Maplot} che i pianeti extra-solari osservati riempono una vasta regione del diagramma $(a,M)$.
+\end{workout}
+\begin{workout}[bimodal radius distro is observed by transit?]
+	Characterization of exoplanets from their formation II. The planetary mass-radius relationship pg 21: bimodal radius distribution
+\end{workout}
+
+\begin{workout}[frequenza sistemi planetarii:doppler + transito]
+	tab.1 mayor11(RV)
+	tab.1: occurrence and architecture exoplanetary system 
+\end{workout}
+
+\begin{workout}[Occurence rate]
+	\begin{itemize}
+		\item Coralie hot jupiter: giant planets $M\sin{i}>0.2\mjupiter$ and $a<0.1au$; $5.6\%$ giant out to 4au
+		\item Lick/Keck/AAT ($M\sin{i}>0.5\mjupiter$): $1.2\%$ stars have hot jupiter and $6.6\%$ giant within 5 au
+		\item ...
+	\end{itemize}
+\end{workout}
+
+\begin{wrapfigure}[18]{l}{0.61\textwidth}
+	\centering \includegraphics[trim={0cm 12cm 0 0},clip, width=0.6\textwidth]{MR-model-obs}
+	\caption{Relazione massa-raggio determinata sulla base di modello planetario dopo \SI{5}{\giga\year}. Per gli esopianeti sono indicate le curve per temperature di equilibrio di \SI{1000}{\kelvin} e \SI{2000}{\kelvin}. Da \cite{guillot2014giant}.}\label{fig:MR-model-obs}
+\end{wrapfigure}
+
+Nel caso un pianeta osservato tramite transito abbia massa nota \'e possibile determinarne la struttura interna tramite un modello planetario: La posizione di un pianeta nel diagramma massa-raggio \'e determinata dalla storia di accrescimento del pianeta (pianeta roccioso, pianeta costituito in parte da ghiacci, pianeta con massa consistente di gas), dal bilancio termico, e propriet\'a di H/He e metalli a alte densit\'a (rottura H molecolare, ionizzazione da pressione, degenerazione elettronica, transizioni di fase). La figura \ref{fig:MR-model-obs} mostra la relazione massa-raggio per pianeti nettuniani fino a regimi stellari. Considerando l'equazione di stato
+\begin{equation}
+P\propto\rho\expy{\gamma},\ \gamma=\frac{1}{n}+1
+\end{equation}
+la relazione massa raggio \'e
+\begin{equation}
+R\propto M\expy{(1-n)/(3-n)}
+\end{equation}
+per $M\approx\mjupiter$ $n\approx1$ quindi il raggio \'e approssimativamente costante. Questo fatto \'e visibile anche nella distribuzione dei raggi planetari (figura \subref{fig:probvsR-T}) nel picco attorno a $\rjupiter$.
+La figura (\subref{fig:RfreqPl100ub}) mostra due picchi nella distribuzione radiale a $1.3\rearth{}$ e $2.4\rearth{}$ dovuti alle sottopopolazioni di pianeti rocciosi e gassosi per $P<\SI{100}{\day}$: i pianeti rocciosi hanno atmosfera di H/He che non contribuisce alle dimensione mentre i pianeti nettuniani hanno strato di gas consistente rispetto alla massa del pianeta. La valle a $1.7\rearth{}$ potrebbe essere il raggio di separazione tra pianeti terrestri con atmosfera tenue di H/He soggetta a evaporazione e pianeti nettuniani con massa consistente di H/He.
+La distribuzione dei periodi \'e mostrata in figura (\subref{fig:freqperstarvsPanfit}): i pianeti sono raggruppati per intervalli di raggio. La frequenza dei pianeti in funzione del periodo segue andamento
+\begin{equation}
+\TDy{\log{P}}{f}=K_PP\expy{\beta}[1-\exp{-(\frac{P}{P_0})\expy{\gamma}}]
+\end{equation}
+Si ipotizza che il diverso valore del raggio critico $P_0$ (riportato in figura) sia dovuto alla dipendenza dal raggio planetario del meccanismo di frenamento della migrazione.
+
+\begin{errata}[Equazione di stato politropa: relazione massa raggio]
+	\begin{equation}
+	P\propto\rho\expy{\gamma},\ \gamma=\frac{1}{n}+1
+	\end{equation}
+	si che per $M\approx\mjupiter$ $n\approx1$.
+	Inoltre la relazione massa-raggio  \'e approssimabile
+	\begin{equation}
+	R\propto M\expy{(1-n)/(3-n)}
+	\end{equation}
+\end{errata}
+
+%\begin{figure}[!ht] \centering\includegraphics[trim={0cm 14cm 0 0},clip, keepaspectratio,width=0.9\textwidth]{MRD}\caption{Diagramma mass-raggio per pianeti di transito. Le curve tratteggiate sono a densit\'a costante. Il simbolo $\circ$ indica i pianeti del sistema solare. Da \cite{perryman2011exoplanet}.}\label{fig:MRD}
+%\end{figure}
+
+%\includegraphics[trim={0cm 0 0 0},clip, keepaspectratio,width=0.9\textwidth]{freqvsRpl50d}\label{freqvsRpl50d}\caption{Da \cite{howard2012planet}}
+% \includegraphics[trim={0cm 0 0 0},clip,width=0.95\textwidth]{keplerRfreq}\label{fig:keplerRfreq} \caption{Da \cite{fressin2013false}}
+%\includegraphics[trim={0cm 0 0 0},clip, keepaspectratio,width=0.9\textwidth]{freqvsRpl50d}\label{fig:freqvsRpl50d}\caption{Da \cite{}.}
+
+\begin{figure}[!ht]
+	\centering \includegraphics[trim={0 12cm 0 0},clip, width=0.95\textwidth]{RfreqPl100ub} 
+	\caption{Distribuzione per i pianeti osservati tramite transito con $P<\SI{100}{\day}$: la valle a $1.7\mearth{}$ si ipotizza causato dall'evaporazione. Da \cite{fulton2017california}.}\label{fig:RfreqPl100ub}
+\end{figure}
+
+{\let\clearpage\relax\let\cleardoublepage\relax
+	\chapter{Ambiente formazione sistemi planetari: dischi protoplanetarii}
+}
+
+\section{''Condizioni iniziali'': disco di accrescimento}
+
+\begin{workout}[Composizione disco accrescimento]
+	(composizione polvere tab 11.2 perry pg 585 e nomenclatura refrattari-volatili;)
+\end{workout}
+
+\begin{workout}[Cos'\'e un disco di accrescimento?]
+	Equazioni fondamentali disco accrescimento, 
+\end{workout}
+
+\begin{workout}[Disco di accrescimento: calibrazione massa, tempo di vita, evaporazione con osservazioni]
+	
+\end{workout}
+
+%{\let\clearpage\relax\let\cleardoublepage\relax
+%\chapter{Dischi protoplanetarii}
+%}
+
+Nei modelli unidimensionali per disco di accrescimento si descrive il trasporto di momento angolare verso l'esterno introducendo la viscosit\'a aumentata $\nu=\frac{\eta}{\rho}\to\alpha c_s H$: giustifico euristicamente la parametrizzazione della viscosit\'a del disco di accrescimento in analogia alla viscosit\'a molecolare (\cite{bouvier2002theory}).
+
+\begin{workout}[Strees tensor]
+	appendix a pg 66 planet formation and migration vs crida PHD torque calculation pg 24
+\end{workout}
+\begin{workout}[Stress tensor in keplerian disk: crida PHD]
+	pg 26
+	\begin{align}
+		&\sigma_{ij}=d_{ij}-PI{ij}\\
+		&d_{ij}=2\Sigma\nu(D_{ij}-\frac{1}{3}(\div{\vec{v}}I_{ij})+\Sigma\zeta(\div{\vec{v}})I_{ij}\\
+		&D_{ij}=\frac{1}{2}(\partial_iv_k+\partial_kv_i)
+	\end{align}
+\end{workout}
+
+L'equazione del moto per un elemento di fluido \'e
+\begin{align}
+	&\PDof{t}(\rho v_i)+\PDof{x_i}(\rho v_iv_j+T_{ij})=F_i\label{eq:fluidmotion}\\
+	&T_{ij}=P\delta_{ij}-\sigma_{ij}\\
+	&\sigma_{ij}=\eta(\partial_jv_i+\partial_iv_j-\frac{2}{3}\delta_{ij}\partial_kv_k)+\zeta\delta_{ij}\partial_kv_k
+\end{align}
+dove $\eta$, $\zeta$ sono le shear e bulk viscosity, quest'ultima legata ai gradi di libert\'a interni della molecola \'e trascurabile se i tempi di equipartizione interni sono molto minori del tempo fra due collisioni.
+%-$\sigma_{ij}$ \'e flusso di componente i di momento in direzione j
+Considero la velocit\'a istantanea di una molecola nel piano xy $(v_x+u_x,u_y)$, dove u \'e la componente casuale e $\exv{}$ rappresenta media temporale (agitazione termica: $\exv{u}=0$) quindi
+\begin{equation}
+\sigma_{xy}=-\rho\exv{u_xu_y}
+\end{equation}
+
+D'altra parte la forza viscosa agente sulla molecola \'e
+\begin{equation}
+F_{visc,x}=\TDy{y}{\sigma_{xy}}\approx\TDof{y}(\eta\TDy{y}{v_x})
+\end{equation}
+%PRIM'ORDINE IN \lambda/L
+Dalle equazioni precedenti si ha che
+\begin{equation}
+\exv{u_iu_j}=-\nu\TDy{x_j}{v_i}\label{eq:molvisccorr}
+\end{equation}
+%con $\eta=\rho\nu$.
+
+Per un disco di densit\'a superficiale $\Sigma(r,t)$, dotato del campo di velocit\'a $(v_r,v_{\phi})=(u_r,r\Omega+u_{\phi})$, scrivo le equazioni di conservazione di massa e la componente azimutale dell'equazi\section{Modello disco di accrescimento}
+one del moto
+\begin{align}
+	&\PDy{t}{\Sigma}+\frac{1}{r}\PDof{r}(r\Sigma v_r)=0\label{eq:massconservation}\\
+	&\Sigma(\PDy{t}{v_{\phi}}+v_r\PDy{r}{v_{\phi}}+\frac{v_rv_{\phi}}{r})=0
+\end{align}
+
+Dalle equazioni precedenti segue l'equazione del momento angolare:
+\begin{equation}
+\PDof{t}[r\Sigma(r\Omega+u_{\phi})]+\frac{1}{r}\PDof{r}[r^2\Sigma(r\Omega+u_{\phi})u_r]=0
+\end{equation}
+Trascuro la fluttuazione azimutale nel termine di derivata temporale e considero media spaziale su scala opportuna:
+\begin{equation}
+\PDof{t}r^2\Sigma\Omega+\frac{1}{r}\PDof{r}[r^3\Sigma\Omega\exv{u_r}+\Sigma r^2\exv{u_ru_{\phi}}]=0\label{eq:smoothedangularmomentumequation}
+\end{equation}
+%\vec{v}=(u_r,\Omega r)
+In analogia all'equazione \eqref{eq:molvisccorr} si definisce
+\begin{equation}
+\sigma_{r\phi}=-\Sigma\exv{u_ru_{\phi}}=\Sigma\nu r \TDy{r}{\Omega}
+\end{equation}
+
+\begin{wrapfigure}[17]{l}{0.5\textwidth}
+	\includegraphics[trim={0cm 19cm 0 0},clip, keepaspectratio,width=0.48\textwidth]{selfsimilaralphadisk}
+	\caption{Soluzione equazione \eqref{eq:sigmaevol} per $\nu\propto r\expy{\gamma}$ con $\gamma=1$. Da \cite{armitage2007lecture}.}\label{fig:selfsimilaralphadisk}
+\end{wrapfigure}
+
+Nei modelli di disco di accrescimento unidimensionali si parametrizza il trasporto di momento angolare ponendo
+\begin{equation}
+\nu=\alpha c_s H
+\end{equation}
+dove $\alpha$ \'e parametro da fissare, $c_s$ la velocit\'a del suono e H lo spessore del disco. Utilizzo l'equazione di conservazione della massa per riscrivere \eqref{eq:smoothedangularmomentumequation}:
+\begin{equation}
+\PDy{t}{\Sigma}=3\frac{1}{r}\PDof{r}[r\expy{1/2}\PDof{r}(\nu\Sigma r\expy{1/2})]\label{eq:sigmaevol}
+\end{equation}
+
+La struttura verticale \'e determinata dalla componente lungo z dell'attrazione del corpo centrale
+%profilo termico determinato da equilibrio termico
+\begin{equation}
+\TDy{z}{P}=-\rho g_z=-\frac{GM_*}{r^2+z^2}\frac{z}{r}\rho=-\Omega^2\rho z
+\end{equation}
+mentre la struttura radiale del disco di gas \'e determinata dall'equilibrio idrostatico
+\begin{equation}
+\frac{v_g^2}{r}=\frac{GM_*}{r^2}+\frac{1}{\rho}\TDy{r}{P}
+\end{equation}
+dove ho introdotto $v_g$ velocit\'a a cui il gas orbita attorno alla stella centrale.
+
+\begin{figure}[!ht]
+	\begin{subfigure}[b]{0.39\textwidth}
+		\centering
+		\includegraphics[trim={0cm 10cm 0 0},clip, keepaspectratio,width=0.98\textwidth]{SED-contours}
+		\caption{Struttura dischi protoplanetari (flusso a $\lambda=\SI{880}{\micro\meter}$) e densit\'a spettrale. La linea tratteggiata viola indica la distribuzione di corpo nero della fotosfera stellare. Da \cite{andrews2010protoplanetary}.}\label{fig:SED-contours}
+	\end{subfigure}
+	~
+	\begin{subfigure}[b]{0.55\textwidth}
+		\includegraphics[trim={0cm 15cm 0 0},clip, keepaspectratio,width=0.98\textwidth]{diskdensity}
+		\caption{Densit\'a superficiale dischi protoplanetari osservati nella regione di Ophiuchus ricavata risolvendo modello disco di accrescimento che riproduca densit\'a spettrale di energia osservata. I rettangoli grigi indicano densit\'a superficiale per la MMSN nella regione di Saturno, Urano e Nettuno. Da \cite{andrews2010protoplanetary}.}\label{fig:diskdensity}
+	\end{subfigure}
+\end{figure}
+
+Attorno alle stelle giovani sovente si trovano strutture opache nel visibile ma otticamente sottili nelle onde infrarosse: risolvendo il modello di disco protoplanetario, avente come input la distribuzione della dimensione della polvere e rapporto gas/polvere, per riprodurre le caratteristiche spettrali e flusso termico osservati, note anche le caratteristiche della stella centrale, si determinano i parametri caratteristici del disco.
+
+La figura (\subref{fig:SED-contours}) mostra le strutture attorno a stelle giovani del cluster Ophiuchus secondo profili di intensit\'a a \SI{880}{\micro\meter}. Se $\nu\propto r\expy{\gamma}$ una soluzione di \eqref{eq:sigmaevol} per $t=0$ \'e
+\begin{equation}
+\Sigma=(2-\gamma)\frac{M_d}{2\pi R_c^2}(\frac{r}{R_c})\expy{-\gamma}\Exp{-(\frac{r}{R_c})\expy{2-\gamma}}
+\end{equation}
+\cite{andrews2010protoplanetary} hanno osservato lo spettro emesso da oggetti nella regione di formazione stellare Ophiuchus determinando massa, dimensioni caratteristiche e viscosit\'a: $M_d=0.004-0.143\msun{}$, $\gamma=0.4-1.1$, $R_c=\SIrange{14}{198}{\astronomicalunit}$.
+
+\begin{wrapfigure}[6]{l}{0.5\textwidth}
+	\centering
+	\includegraphics[trim={0cm 13cm 0 0},clip, width=0.49\textwidth,keepaspectratio]{clusterage-fstar}
+	\caption{Frazione di stelle con disco protoplanetario in funzione dell'et\'a del cluster. Da \cite{mamajek2009initial}. }\label{fig:clusterage-fstar}
+\end{wrapfigure}
+
+In figura (\ref{fig:clusterage-fstar}) \'e riportata la frazione di stelle con dischi protoplanetari in funzione dell'et\'a del cluster. \'E possibile stimare tempo di vita caratteristico del disco considerando andamento esponenziale per frazione di dischi: secondo (\cite{mamajek2009initial}) $\tau_c\approx\SI{2.5}{\mega\year}$, mentre (\cite{haisch2001disk}) hanno determinato $\tau_c\approx\SI{6}{\mega\year}$.
+
+\vspace{0.2\textheight}
+
+\begin{workout}[Caratteristiche fittate proto-dischi]
+	\begin{table}[!ht]
+		\begin{tabular}{|cccccc|}
+			Nome&$M_d$&$\gamma$&$R_c$&$H_{100}$&\\
+			AS 205&0.029&0.9&46&19.6&0.11\\
+		\end{tabular}
+	\end{table}
+\end{workout}
+
+\begin{workout}[Profilo densit\'a verticale disco isotermo]
+	Thin vertically isothermal disk
+	\begin{align}
+		&\rho(z)=\frac{\Sigma}{h\sqrt{2\pi}}\exp{-\frac{z^2}{2h^2}}
+		&
+	\end{align}
+\end{workout}
+
+\begin{workout}[Profilo termico del disco]
+	
+\end{workout}
+
+\begin{workout}[Momento torcente in disco Kepleriano]
+	\begin{align}
+		&\sigma_{ij}=2\Sigma\nu D_{ij}=\Sigma\nu\begin{pmatrix}0&-\Omega\partial_r(r\Omega)\\-\Omega+\partial_r(r\Omega)&0
+		\end{pmatrix}\\
+	\end{align}
+	Il momento torcente esercitato da S su $C^c$ \'e
+	\begin{equation}
+	T=\iint_{S^c}(\vec{r}\wedge\nabla\sigma)\,ds=\int_S\vec{r}\wedge(\sigma\,dl\vec{n})
+	\end{equation}
+	Nel caso S sia circonferenza di raggio r:
+	\begin{equation}
+	T_{\nu}=3\pi r^2\Omega_0\Sigma\nu
+	\end{equation}
+\end{workout}
+
+\begin{workout}[Passive disks]
+	(Refs: Ref: spectral energy distribution of T-Tauri star with passive circumstellar disk)
+	Dust passively reirradiate star light
+\end{workout}
+
+\begin{workout}[Struttura verticale del disco, profilo termico]
+	Pressione gas determinata da equilibrio idrostatico
+\end{workout}
+
+\begin{workout}[Viscous/turbulent disk]
+	laminar (high momentum diffusion)
+	mass inflow Gullbring98 \SIrange{e-9}{e-7}{\per\year}$\msun{}$
+\end{workout}
+\begin{workout}[MRI]
+	fig 10.3:
+	gammie 1996
+\end{workout}
+
+\begin{workout}[alpha prescription]
+	$\vec{v}=(u_r,r\Omega)$, stress tensor $\sigma_{r\phi}=-\Sigma\exv{u_ru_{\phi}}$.
+	Enhanced turbulent viscosity: $-\Sigma\exv{u_ru_{\phi}}=\Sigma\nu r\TDy{r}{\Omega}$, $\nu=v_TH$, $\alpha=v_T/c_s$
+\end{workout}
+
+\begin{workout}[Accretion disk sources]
+	Lodato: classical disk physics
+	o218, 296: disk formation, constrains from solar system
+	the alpha disk pg 18: theory of turbulent accretion disk
+\end{workout}
+
+\begin{workout}[Isothermal cloud collapse!]
+	
+\end{workout}
+
+\begin{workout}[Descrizione trasporto momento angolare tramite parametrizzazione viscosit\'a]
+	Mass conservation + momentum conservation in viscous flow: angular momentum evolution. Phenomena: Shear viscosity - turbulence - MRI.
+	Nei modelli 1D per disco di accrescimento si parametrizza viscosit\'a tramite $\nu=\frac{\eta}{\rho}\to\alpha c_s H$: la viscosit\'a molecolare \'e troppo bassa  per trasportare all'esterno il momento angolare sui tempi-scala osservati.
+	Theory of turbulent accretion disk: pg 18, 8.
+	Flusso di x-momentum lungo y $\rho\exv{u_xu_y}$, dove considero la velocit\'a dell'elemento di fluido $(v_x+u_x,u_y)$ dove le $u$ rappresentano fluttuazioni della velocit\'a: $\sigma_{xy}=-\rho\exv{u_xu_y}$.
+	Ricordando la definizione di tensore degli stress e con $\vec{v}=v_x(y)\hat{x}$
+	\begin{equation}
+	\sigma_{ij}=\eta(\partial_jv_i+\partial_iv_j-\frac{2}{3}\delta_{ij}\partial_kv_k+\zeta\delta_{ij}\partial_kv_k \to \eta\TDy{y}{v_x}
+	\end{equation}
+	\begin{equation}
+	\PDof{t}(\rho v_i)+\PDof{x_i}(\rho v_iv_j+T_{ij})=F_i
+	\end{equation}
+	Fluttuazioni: $\sigma_{ij}=-\rho\exv{u_iu_j}$.
+	Viscosit\'a molecolare: $\exv{u_iu_j}=-\nu\TDy{x_j}{v_i}$.
+	Turbulence: Reynpold stress $\tau_{ij}=-\rho\exv{v_jv_i}$, $\exv{u_iu_j}=-\nu_T\TDy{x_j}{v_i}$
+	\begin{equation}
+	\PDy{t}{\Sigma}=3\frac{1}{r}\PDof{r}[r\expy{1/2}\PDof{r}(\nu\Sigma r\expy{1/2})]
+	\end{equation}
+\end{workout}
+
+\begin{workout}[Photoievaporation: X-EUV-FUV (Alexander13: The Dispersal of Protoplanetary Disks)]
+	Protoplanetary disc evolution and dispersal: the implications of X-ray photoevaporation.
+\end{workout}
+
+
+\begin{workout}[Foto-evaporazione]
+	(Photoevaporation: veras armitage 2003, Alexander13, Mordasini12. Internal/External).
+	EUV($E\approx13.6eV$): ionization, FUV($E\approx6-13.6eV$): dissociation, X-ray
+\end{workout}
+
+\begin{workout}[classificazione YSO]
+	section{YSO: distribuzione propriet\'a dischi protoplanetari}
+	La classificazione empirica degli young stellar object (YSO) si basa sul valore di
+	\begin{equation}
+	\alpha_{IR}=\TDly{\lambda}{\lambda F_{\lambda}}
+	\end{equation}
+	tra \SIrange{2.2}{25}{\micro\meter}.
+	\begin{itemize}
+		\item Classe 0: Picco emissione in regione da lontano infrarosso a sub-millimetrica. Nubi molecolari compatte/protostelle.
+		\item Classe 1: $\alpha_{IR}>0$ a \SI{2}{\micro\meter}. La stella accresce la maggior parte della sua massa finale.
+		\item Classe 2: $0\geq\alpha_{IR}\geq-1.5$. Stella T-Tauri con disco otticamente spesso a $\lambda\leq\SI{10}{\micro\meter}$.
+		\item Classe 3: $\alpha_{IR}\leq-1.5$. Stella T-Tauri con disco otticamente sottile a $\lambda\leq\SI{10}{\micro\meter}$.
+	\end{itemize}
+\end{workout}
+
+\begin{workout}[Fit SED]
+	Disk model
+	\begin{align}
+		\nu\propto R\expy{\gamma}\\
+		\Sigma=(2-\gamma)\frac{M_d}{2\pi R_c^2}(\frac{R}{R_c})\expy{-\gamma}\\Exp{-(\frac{R}{R_c})\expy{2-\gamma}}
+	\end{align}
+\end{workout}
+
+
+\begin{workout}[Initial conditionfor protostellar collapse]
+	Andre 2000 - 
+\end{workout}
+
+\begin{workout}[T Tauri SED more flattish]
+	Ref: spectral energy distribution of T-Tauri star with passive circumstellar disk
+\end{workout}
+
+\begin{workout}[physical processes in protoplanetary disk: IRexcess, accretion rate and lifetime,]
+	(armitage 17): fig 1, accretion rate and lifetime (2.2 pg 5-6), inference from dust continuum (disk mass, evidence for mm-particle growth
+	Le stelle giovani sono caratterizzate da eccesso infrarosso fra \SIrange{2.5}{10}{\micro\meter}:
+	\begin{equation}
+	\alpha_{IR}=\TDly{\nu}{\nu F_{\nu}}
+	\end{equation}
+	Sorgenti con SED declinante in mid infrared ($2.5-10\si{\micro\meter}$): $1.5<\alpha_{IR}=<0$. Active/passive: mass infall convert G into thermalradiation/reprocessed starlight.
+	Refs: Perrymann 10.3 - disk formation pg 218 - 
+	Classification based on slope of SED between $2-25\si{\micro\meter}$: $\alpha_{IR}=\TDly{\nu}{\nu F_{\nu}}=$ (Gail Hoppo 2010)
+	Spitzer: forming regions within 500pc
+	Formation: disk quickly forms as more distant material with high angular momentum, centrifugal radius $R(t)\propto\Omega^2 t^3$: . Class 0-I : protostellar disk, gravitational unstable (cloud collapse: the collapse of the cores of slowly rotating isothermal clouds, Terebey shu cassen 1984, selfsimilar collapse of isothermal spheres and star formation, shu 77). Singular isothermal sphere: $\rho=\frac{a^2}{2\pi G}r\expy{-2}$, $M(r)=\frac{2a^2}{G}r$.
+\end{workout}
+
+\begin{workout}[disco protoplanetario: distribuzioni condizioni iniziali]
+	
+	Initial disk mass
+	(infall phase end, no more self-gravitational instabilities) - stability(shu90), MMSN hayashi81/weidenshilling77, observations(Andrews10,Manara16) points to $(0.1-10)\%$ stellar mass, distro log-normal with mean $0.01M_*$.
+	
+	{Disk lifetime}
+	$1-10My$ with mean $3My$ (Haisch01, Mamajek09)
+	
+\end{workout}
+
+\begin{workout}[YSO: classificazione ]
+	SED: emissine a lunghezze d'onda millimetriche probano tutto il volume del disco, otticamente sottile a quelle lunghezze (Beckwith 90, Beckwith Sargent91).
+	$S_{\nu}\propto B_{\nu}(1-\exp{-\tau})\approx B_{\nu}\tau$: emission produced near cold disk mid-plane.
+	Rayleigh-jeans: $B_{\nu}\propto T$ and, since $\tau=\kappa\Sigma$, $S_{\nu}\propto \kappa\Sigma T$.
+	(SED: Andrews williams 07)
+	Survey: 0.3'', 345Ghz(870$\micro m$) 1Myr old Ophiuchus stars forming region
+	The absolute chronology and thermal processing of solids in the solar protoplanetary disk (Connelly Ivanova 12)
+\end{workout}
+
+\begin{workout}[Selfsimilar initial disk density solution]
+	Refs: Lynden-bel pringle 74
+	Se la viscosit\'a \'e statica e distribuita secondo $\nu\propto r\expy{\gamma}$:
+	\begin{align}
+		&R_c=R_1\mathcal{T}\expy{1/(2-\gamma)}\\
+		&M_d=M_{d,0}\mathcal{T}\expy{-1/2(2-\gamma)}\\
+	\end{align}
+\end{workout}
+
+\begin{workout}[Analitic disk model]
+	Chambers 09: On analytical model for the evolution of a viscous, irradiated disk
+	On location of snowline in protoplanetary disk (lecar chiang 06)
+	On the snow line in dusty PPD (Sasselov lecar 99)
+	Accretion disks around young object I: Detailed vertical structure (D'alessio Lizzano 98)
+\end{workout}
+
+\begin{workout}[YSO properties distro]
+	Refs: ''Protoplanetary Disk Structures in Ophiuchus''
+	da dove sono ricavete nei PPS?
+	mass: MMSN, andrews 10, manara 16
+	lifetime: IR/UV excess: haisch 01, mamajek 09
+	initial embryo starting position: relative spacing of few hill radii (kokubo ida 00), fill disk thinking of asyntituc isolation mass (Ida Lin 10), trapped (hasegawa pudritz 11, cridland 16)
+	Hueso 05: evolution of protoplanetary disk, meyer 06 Formation and evolution of planetary systems, Udry 07: statistical properties of exoplanets)
+	Distribuzione di probabilit\'a per condizioni iniziali.
+	
+	Initial condition for planet formation (protoplanetry disk \cite{meyer2006formation}): disk metallicity, mass, lifetime, \ldots
+	
+	{Metallicity and Dust/Gas}
+	$[M/H]$ distro modelled as normal: $\mu=-0.02$, $\sigma=0.22$ (photosphere of solar-like stars in solar neighborhood): Santos05.
+	$f_{dg}=f_{dg,\odot}10\expy{[M/H]}$ with $f_{dg,\odot}=0.01-0.02$.
+\end{workout}
+
+\begin{workout}[Classificazione YSO: convenzioni]
+	Sorgenti con SED declinante in mid infrared ($2.5-10\si{\micro\meter}$): $1.5<\alpha_{IR}=<0$. Active/passive: mass infall convert G into thermalradiation/reprocessed starlight.
+	Refs: Perrymann 10.3 - disk formation pg 218 - 
+	Classification based on slope of SED between $2-25\si{\micro\meter}$: $\alpha_{IR}=\TDly{\nu}{\nu F_{\nu}}=$ (Gail Hoppo 2010)
+	Spitzer: forming regions within 500pc
+	Formation: disk quickly forms as more distant material with high angular momentum, centrifugal radius $R(t)\propto\Omega^2 t^3$: . Class 0-I : protostellar disk, gravitational unstable (cloud collapse: the collapse of the cores of slowly rotating isothermal clouds, Terebey shu cassen 1984, selfsimilar collapse of isothermal spheres and star formation, shu 77). Singular isothermal sphere: $\rho=\frac{a^2}{2\pi G}r\expy{-2}$, $M(r)=\frac{2a^2}{G}r$
+\end{workout}
+
+\begin{workout}[Refs dischi protoplanetari]
+	Ciesla Dullemond10 
+	Perryman ch 10
+	williams cieza 11
+	Andrews 09-10
+	mamajek 2009 - Initial conditions of planet formation: lifetimes of primordial disks
+	infrared excess: gail hoppe10
+\end{workout}
+
+\section{Modello disco di accrescimento e distribuzione condizioni iniziali}
+%Refs: Sec4 mordasini09
+%\cleardoublepage
+
+\begin{workout}[planet luminosity]
+	\begin{align}
+		&L=L_{cont}+L_{acc}\\
+		&L_{cont}=-\frac{E_t(t+dt)-E_t(t)-E_{gas,acc}}{dt}\\
+		&E_{gas,acc}=dt\,\dot{M}_{gas}u_{int}\\
+		&L_{acc}=G\frac{\dot{M}_{core}M_{core}}{R_{core}}
+	\end{align}
+\end{workout}
+
+Tramite metodi di montecarlo si determinano numerose combinazioni delle condizioni iniziali del disco e dei parametri scelti per descrivere la sua struttura.
+Le variabili di montecarlo hanno distribuzione determinata dalle osservazioni.
+
+\begin{workout}[modello globale: evoluzione dal semplice al complesso]
+	Global model of planets formation and evolution: more detailed submodels
+\end{workout}
+
+Il modello pi\'u semplice di disco di accrescimento usa distribuzione esponenziale per andamento densit\'a superficiale e temperature, assumendo disco otticamente sottile, e relazione $L_*\propto M_*^4$ di sequenza principale. Le lacune di questo modello sono
+\begin{itemize}
+	\item i dischi sono otticamente spessi con transizioni nell'opacit\'a
+	\item non \'e presente evoluzione temporale consistente
+\end{itemize}
+
+Modelli pi\'u recenti  risolvono l'equazione per l'evoluzione viscosa:
+\begin{align}
+	&\TDy{t}{\Sigma}=\frac{1}{r}\PDof{r}[3r\expy{1/2}\PDof{r}(\nu\Sigma r\expy{1/2})]+\dot{\Sigma}_w(r)+\dot{\Sigma}_{embryo}(r)\label{eq:diskaccrphev-m18}\\
+	&\dot{\Sigma}_w(a)=\left\{\begin{array}{c}0\quad a<R_g\\\frac{\dot{M}_w}{2\pi(a_{max}-R_g)a}\quad \text{altrimenti}\\\end{array}\right.
+\end{align}
+con $\dot{\Sigma}_w$ contributo della foto-evaporazione (\cite{veras2004outward}), $R_g=\SI{5}{\astronomicalunit}$ e $a_{max}$ estremo del disco,  $\dot{\Sigma}_{embryo}$ contributo di accrescimento di gas e componente solida dei pianeti.
+La densit\'a superficiale iniziale \'e assunta essere:
+\begin{equation}
+\Sigma(a,t=0)=\Sigma_0(\frac{r}{1AU})\expy{p_g}\Exp{[-(\frac{r}{R_o})\expy{2+p_g}]}(1-\sqrt{\frac{r}{R_i}})
+\end{equation}
+dove i parametri possono essere scelti casualmente secondo una distribuzione di probabilit\'a ricavata dalle osservazioni.
+
+La distribuzione di massa e la frazione di dischi protoplanetari per ammassi stellari di et\'a diversa \'e mostrata in figura (\ref{fig:initdistro}). La massa \'e determinata misurando il flusso di emissione termica della polvere: la distribuzione di $\log{M_{disk}}$  \'e gaussiana e per il cluster Ophiuchus la distribuzione \'e fittata da gaussiana corrispondente a massa media $M_{disk}=0.042\msun{}$.
+
+Il tempo caratteristico del disco \'e determinato dalla viscosit\'a $\alpha$: fissata $\alpha$ compatibile con tempo caratteristico osservato $\tau_{disk}^{obs}\approx\SI{3}{\mega\year}$ e assumendo la distribuzione uniforme nel logaritmo di $\dot{M}_w$, si calcola  $t_{disk}(\alpha,\Sigma_0,\dot{M}_w)$ determinando gli estremi dello fotoevaporazione per riprodurre tempi di vita osservati.
+
+Valori tipici sono $\dot{M}_w=\SIrange{5e-10}{3e-8}\msun{}/\si{\year}$ per $\alpha=\num{7e-3}$.
+
+Nelle popolazione planetaria considerata $\alpha$ \'e fissato compatibilmente con le osservazioni  ed \'e omogeneo e costante.
+
+\begin{figure}[!ht]
+	\includegraphics[trim={0cm 10cm 0 0},clip, keepaspectratio,width=0.7\textwidth]{initdistro}
+	\caption{Distribuzione caretteristiche dischi di accrescimento. Da \cite{mordasini2018planetary}.}\label{fig:initdistro}\end{figure}
+
+\begin{workout}[viscosit\'a disco]
+	Nella popolazione planetaria simulata $\alpha$ \'e fissato sulla base delle osservazioni  ed \'e omogeneo e costante.
+\end{workout}
+
+\begin{workout}[Modello di disco di accrescimento - (Mordasini18: 4) - Introduzione descrizione fenomeni grazie a PPS]
+	Refs: garaud lin 07, chiang goldreich 97
+	Un modello di disco  di accrescimento usato nelle simulazioni considera l'evoluzione della densit\'a superficiale tramite l'equazione \eqref{eq:diskaccrphev-m18}
+	\begin{align}
+		&\TDy{t}{\Sigma}=\frac{1}{r}\PDof{r}[3r\expy{1/2}\PDof{r}(\nu\Sigma r\expy{1/2})]+\dot{\Sigma}_w(r)+\dot{\Sigma}_p(r)\label{eq:diskaccrphev-m18}\\
+		&\dot{\Sigma}_w(a)=\left\{\begin{array}{c}0\\\frac{\dot{M}_w}{2\pi(a_{max}-R_g)a}\\\end{array}\right.
+	\end{align}
+	Densit\'a superficiale iniziale:
+	\begin{equation}
+	\Sigma(a,t=0)=\Sigma_0(\frac{r}{1AU})\expy{p_g}\Exp{[-(\frac{r}{R_o})\expy{2+p_g}]}(1-\sqrt{\frac{r}{R_i}})
+	\end{equation}
+	4-Mordasini18 (Hayashi81). $p_g\approx1$ (Andrews10).
+\end{workout}
 
 \begin{workout}[Some refs]
 	\begin{itemize}
