only two parts: first contraints; second: berna model

--- a/PFMconstraints.tex
+++ b/PFMconstraints.tex
@@ -630,9 +630,9 @@ In figura (\ref{fig:clusterage-fstar}) \'e riportata la frazione di stelle con d
 
 \vspace{0.2\textheight}
 
-\begin{workpout}[''The TW Hya Disk at 870μm:  Comparison of CO and Dust Radial Structures'': introduzione profilo pi\'u ripido per componente solida]
+\begin{workout}[''The TW Hya Disk at \SI{870}{\micro\meter}:  Comparison of CO and Dust Radial Structures'': introduzione profilo pi\'u ripido per componente solida]
 peeble drift: peeble drift inward from peeble formation line 
-\end{workpout}
+\end{workout}
 
 \begin{workout}[Caratteristiche fittate proto-dischi]
 	\begin{table}[!ht]
