--- a/GFMresult.tex
+++ b/GFMresult.tex
@@ -1,6 +1,16 @@
 {\let\clearpage\relax\let\cleardoublepage\relax
 \chapter{Modelli di formazione globali e semplificazioni introdotte}
 }
+
+\begin{errata}[planetary system diversity]
+	Il variare delle caratteristiche dei sistemi planetari osservati \'e determinato dal variare delle condizioni iniziali: distribuzione di massa dei dischi protoplanetarii e di metallicit\'a, tempo di vita, condizioni del cluster di cui fa parte il disco.
+\end{errata}
+
+Le popolazioni planetarie sintetiche sono costruite partendo dalla fase finale di accrescimento di massa sulla stella centrale. In questo modo \'e possibile determinare in maniera statistica l'accuratezza delle ipotesi su cui si basano i modelli di formazione planetaria tramite confronto con la distribuzione delle propriet\'a dei pianeti osservati, tenuto conto dei bias osservativi.
+
+A questo scopo  \'e necessario introdurre una descrizione semplificata dei processi fisici che portano alla formazione di un pianeta; quindi generare una popolazione planetaria a partire da un gran numero di combinazioni di condizioni iniziali determinate casualmente con distribuzione in accordo alle osservazioni.
+
+\section{Modello di Berna}
 (Da \cite{mordasini2009extrasolar}, \cite{mordasini2018planetary})
 
 \begin{wrapfigure}[22]{l}{0.7\textwidth}
