--- a/seminario.bib
+++ b/seminario.bib
@@ -170,6 +170,95 @@ pages={1282},
   publisher={Springer}
 }
 
+@article{bonanno2002age,
+	title={The age of the Sun and the relativistic corrections in the EOS},
+	author={Bonanno, A and Schlattl, H and Patern{\`o}, L},
+	journal={Astronomy \& Astrophysics},
+	volume={390},
+	number={3},
+	pages={1115--1118},
+	year={2002},
+	publisher={EDP Sciences}
+}
+
+@article{hansen2009formation,
+	title={Formation of the terrestrial planets from a narrow annulus},
+	author={Hansen, Brad MS},
+	journal={The Astrophysical Journal},
+	volume={703},
+	number={1},
+	pages={1131},
+	year={2009},
+	publisher={IOP Publishing}
+}
+
+
+@article{lin1986tidal,
+	title={On the tidal interaction between protoplanets and the protoplanetary disk. III-Orbital migration of protoplanets},
+	author={Lin, DNC and Papaloizou, John},
+	journal={The Astrophysical Journal},
+	volume={309},
+	pages={846--857},
+	year={1986}
+}
+
+
+@article{hahn1999orbital,
+	title={Orbital evolution of planets embedded in a planetesimal disk},
+	author={Hahn, Joseph M and Malhotra, Renu},
+	journal={The Astronomical Journal},
+	volume={117},
+	number={6},
+	pages={3041},
+	year={1999},
+	publisher={IOP Publishing}
+}
+
+
+@article{yin2002short,
+	title={A short timescale for terrestrial planet formation from Hf--W chronometry of meteorites},
+	author={Yin, Qingzhu and Jacobsen, SB and Yamashita, K and Blichert-Toft, J and T{\'e}louk, Ph and Albarede, F},
+	journal={Nature},
+	volume={418},
+	number={6901},
+	pages={949},
+	year={2002},
+	publisher={Nature Publishing Group}
+}
+
+@article{walsh2011low,
+	title={A low mass for Mars from Jupiter’s early gas-driven migration},
+	author={Walsh, Kevin J and Morbidelli, Alessandro and Raymond, Sean N and O'brien, David P and Mandell, Avi M},
+	journal={Nature},
+	volume={475},
+	number={7355},
+	pages={206},
+	year={2011},
+	publisher={Nature Publishing Group}
+}
+
+@article{bahcall1995solar,
+	title={Solar models with helium and heavy-element diffusion},
+	author={Bahcall, John N and Pinsonneault, MH and Wasserburg, GJ},
+	journal={Reviews of Modern Physics},
+	volume={67},
+	number={4},
+	pages={781},
+	year={1995},
+	publisher={APS}
+}
+
+
+@article{nayakshin2017dawes,
+	title={Dawes review 7: the tidal downsizing hypothesis of planet formation},
+	author={Nayakshin, Sergei},
+	journal={Publications of the Astronomical Society of Australia},
+	volume={34},
+	year={2017},
+	publisher={Cambridge University Press}
+}
+
+
 @article{fulton2017california,
   title={The California-Kepler survey. III. A gap in the radius distribution of small planets},
   author={Fulton, Benjamin J and Petigura, Erik A and Howard, Andrew W and Isaacson, Howard and Marcy, Geoffrey W and Cargile, Phillip A and Hebb, Leslie and Weiss, Lauren M and Johnson, John Asher and Morton, Timothy D and others},
@@ -179,6 +268,17 @@ pages={1282},
   pages={109},
   year={2017},
   publisher={IOP Publishing}
+}
+
+@article{kuiper1951origin,
+	title={On the origin of the solar system},
+	author={Kuiper, Gerard P},
+	journal={Proceedings of the National Academy of Sciences of the United States of America},
+	volume={37},
+	number={1},
+	pages={1},
+	year={1951},
+	publisher={National Academy of Sciences}
 }
 
 @article{kornet2004alternative,
