--- a/pps-seminario.tex
+++ b/pps-seminario.tex
@@ -145,7 +145,7 @@ I modelli di formazione planetaria fino alla scoperta del primo esopianeta (Quel
 La comprensione dei meccanismi di formazione dei sistemi planetari \'e stata determinata sulla base dell'architettura orbitale del sistema solare e della composizione chimica solare, dei pianeti e dei corpi minori.
 \end{errata}
 
-\begin{workout}[frammentazione di nube molecolare e form azione di disco di accrescimento attorno a stella giovane]
+\begin{workout}[frammentazione di nube molecolare e form azione di disco di accrescimento attorno a stella giovane: citazione tscharnuter]
 	L'ipotesi di formazione del sistema solare passando dallo stadio di nebulosa planetaria ha radici storiche che risalgono a prima dell'osservazione di stelle giovani e dell'interpretazione dello spettro di luce che da loro proviene.
 	Le teorie attuali prevedono che i sistemi planetarii si formino nella fas efinale di formazione stellare: il materiale presente nella regione instabile di una nube molecolare \'e dotato di momento angolare quindi accresce sulla massa della protostella centrale formando un disco ortogonale al momento totale della nube che trascurando l'effetto della pressione del gas, ruota con velocit\'a angolare kepleriana.
 \end{workout}
@@ -154,8 +154,8 @@ La comprensione dei meccanismi di formazione dei sistemi planetari \'e stata det
 % (\cite{lissauer1993planet}).
 A partire dalla scoperta del primo esopianeta attorno a stella di sequenza principale singola (\cite{mayor1995jupiter}), numerose campagne osservative hanno individuato una cospicua popolazione di esopianeti. Parallelamente per valutare le teorie di formazione alla luce delle osservazione sono state sviluppate tecniche per simulare una popolazione planetaria a partire dalle condizioni iniziali osservate nei dischi protoplanetari: \'e possibile una verifica dei meccanismi di formazione che prescinda dalle condizioni particolari di un singolo sistema.
 -----
-In questo seminario considero le caratteristiche della popolazione planetaria sintetica basata sul modello di Berna (\cite{mordasini2018planetary}): in particolare il confronto tra distribuzione in massa, raggio planetarii e frequenza planetaria in funzione metallicit\'a stellare con quelli osservati tramite velocit\'a radiale e transiti e confronto le sottopolazioni di pianeti giganti, pianeti con periodo minore di \SI{100}{\day} e pianeti abitabili.
----Confronto con planetary traps branch
+In questo seminario considero le caratteristiche della popolazione planetaria sintetica basata sul modello di Berna (\cite{mordasini2018planetary}): in particolare il confronto tra distribuzione in massa, raggio planetarii e frequenza planetaria in funzione metallicit\'a stellare con quelli osservati tramite velocit\'a radiale e transiti; inoltre considero la frequenza delle sottopolazioni di pianeti giganti, pianeti con periodo minore di \SI{100}{\day} e pianeti abitabili.
+%---Confronto con planetary traps branch
 \end{workout}
 
 {\let\clearpage\relax\let\cleardoublepage\relax
@@ -165,20 +165,30 @@ In questo seminario considero le caratteristiche della popolazione planetaria si
 Descrivo le tecniche osservative, le osservabili e effetti di selezione, quindi le propriet\'a degli esopianeti nei diagrammi $(a-M)$, $(a-R)$, $(M-R)$: quali osservabili determinano le diverse tecniche osservative, struttura pianeta (sistema solare, esopianeti).
 \end{errata}
 
-\begin{workout}[Safronov citation: justification of CA]
-Lo schema di core accretion (CA) prevede la coagulazione della componente polverosa in embrioni planetari che, se abbastanza massicci, sono in grado di accrescere il gas presente nel disco protoplanetario, mentre lo schema di formazione alternativo considera la frammentazione del disco protoplanetario per instabilit\'a gravitazionale e la condensazione della componente solida all'interno dei frammenti.
+\begin{workout}[Cosa faccio in questo capitolo]
+Formazione sistema solare: MMSN, vincoli? grand tack scenario; le simulazioni numeriche sono un vincolo??
+Caratteristiche esopianeti: survey, popolazione dei diagrammi a-M, M-R e a-R.
 
-Alcuni dati osservativi riguardo al sistema solare lasciano ipotizzare che il primo modello sia il canale di formazione preponderante (\begin{workout}[cit osservazioni pro CA: lissauer 93 vs nayaskin16+ vs safronov 72]\end{workout}) per sistemi planetari attorno a stella singola di sequenza principale:
+\end{workout}
+
+\begin{workout}[Safronov citation: justification of CA]
+Lo schema di core accretion (CA) (vedi \cite{safronov1972evolution}) prevede la coagulazione della componente polverosa in embrioni planetari che, se abbastanza massicci, sono in grado di accrescere il gas presente nel disco protoplanetario, mentre lo schema di formazione alternativo considera la frammentazione del disco protoplanetario per instabilit\'a gravitazionale e la condensazione della componente solida all'interno dei frammenti (vedi \cite{kuiper1951origin} e la versione aggiornata descritta in \cite{nayakshin2017dawes}).
+\end{workout}
+
 \begin{workout}[Stella singola sequenza principale: limiti massa]
 	rapporto massa stella/pianeti (osservazioni gravitational lensing)
 \end{workout}
-\begin{itemize}
-	\item arricchimento dei pianeti del sistema solare rispetto a composizione solare di metalli%(la composizione di Urano/Nettuno contiene $1\%$ di $H_2$, $He$ contenuto in pianeta di composizione solare con pari massa di metalli)
-	\item ipotizzando una successiva rimozione della parte gassosa il pianeta deve avere il tempo di sedimentare la componente metallica
-	\item perch\'e si abbia instabilit\'a gravitazionale \'e necessario un disco di massa solare e i pianeti si formerebbero a distanza maggiore
-	\item I corpi minori non sono spiegati da instabilit\'a gravitazionale
-\end{itemize}
+
+\begin{workout}[Elementi a favore di CA: lissauer 93]
+	Alcuni dati osservativi riguardo al sistema solare lasciano ipotizzare che il primo modello sia il canale di formazione preponderante per sistemi planetari attorno a stella singola di sequenza principale:
+	\begin{itemize}
+		\item arricchimento dei pianeti del sistema solare rispetto a composizione solare di metalli%(la composizione di Urano/Nettuno contiene $1\%$ di $H_2$, $He$ contenuto in pianeta di composizione solare con pari massa di metalli)
+		\item ipotizzando una successiva rimozione della parte gassosa il pianeta deve avere il tempo di sedimentare la componente metallica
+		\item perch\'e si abbia instabilit\'a gravitazionale \'e necessario un disco di massa solare e i pianeti si formerebbero a distanza maggiore
+		\item I corpi minori non sono spiegati da instabilit\'a gravitazionale
+	\end{itemize}
 \end{workout}
+
 \input{PFMconstraints}
 \cleartorecto
 
