--- a/seminario.bib
+++ b/seminario.bib
@@ -226,6 +226,17 @@ pages={1282},
 	publisher={Nature Publishing Group}
 }
 
+@article{schneider2011defining,
+	title={Defining and cataloging exoplanets: the exoplanet. eu database},
+	author={Schneider, Jean and Dedieu, Cyrill and Le Sidaner, Pierre and Savalle, Renaud and Zolotukhin, Ivan},
+	journal={Astronomy \& Astrophysics},
+	volume={532},
+	pages={A79},
+	year={2011},
+	publisher={EDP Sciences}
+}
+
+
 @article{walsh2011low,
 	title={A low mass for Mars from Jupiter’s early gas-driven migration},
 	author={Walsh, Kevin J and Morbidelli, Alessandro and Raymond, Sean N and O'brien, David P and Mandell, Avi M},
